
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_13__ TYPE_2__ ;
typedef struct TYPE_12__ TYPE_1__ ;


struct TYPE_12__ {int rows; int cols; int * vals; } ;
typedef TYPE_1__ matrix ;
struct TYPE_13__ {int h; int w; int c; int data; } ;
typedef TYPE_2__ image ;


 int * calloc (int,int) ;
 TYPE_2__ center_crop_image (TYPE_2__,int,int) ;
 int flip_image (TYPE_2__) ;
 int free_image (TYPE_2__) ;
 TYPE_2__ load_image_color (char*,int ,int ) ;
 int rand () ;
 TYPE_2__ random_augment_image (TYPE_2__,float,float,int,int,int,int) ;
 int random_distort_image (TYPE_2__,float,float,float) ;

matrix load_image_augment_paths(char **paths, int n, int min, int max, int size, float angle, float aspect, float hue, float saturation, float exposure, int center)
{
    int i;
    matrix X;
    X.rows = n;
    X.vals = calloc(X.rows, sizeof(float*));
    X.cols = 0;

    for(i = 0; i < n; ++i){
        image im = load_image_color(paths[i], 0, 0);
        image crop;
        if(center){
            crop = center_crop_image(im, size, size);
        } else {
            crop = random_augment_image(im, angle, aspect, min, max, size, size);
        }
        int flip = rand()%2;
        if (flip) flip_image(crop);
        random_distort_image(crop, hue, saturation, exposure);







        free_image(im);
        X.vals[i] = crop.data;
        X.cols = crop.h*crop.w*crop.c;
    }
    return X;
}
